add latests changes (dropTable). The project does not compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(DBMS)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(DBMS main.cpp)
+add_executable(DBMS main.cpp implementations/Table.cpp headers/Table.h headers/Constants.h implementations/Constants.cpp)
