Database, DBTable and Utils classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,19 @@ project(DBMS)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(DBMS main.cpp)
+add_executable(DBMS main.cpp
+        headers/Application.h
+        headers/CommandExecutor.h
+        headers/CommandParser.h
+        headers/DataBase.h
+        headers/DBTable.h
+        headers/Constants.h
+        implementations/Application.cpp
+        implementations/CommandExecutor.cpp
+        implementations/CommandParser.cpp
+        implementations/DataBase.cpp
+        implementations/DBTable.cpp
+        utils/DBUtils.h
+        utils/FileUtils.h
+        utils/StringUtils.h
+        )
